# pr-approver

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  release.yml  scan.yml  trigger.yml
src/: main.rs
