[package]
name = "pr-approve"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
license = "MIT OR Apache-2.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3


[lints.rust]
unsafe_code = "forbid"
unused = "allow" # For exploratory dev.

[dependencies]
dotenv = "0.15.0"
octocrate = { version = "1.0.0", features = ["full"] }
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
derive_more = { version = "1.0.0-beta.6", features = ["from"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
openssl = { version = "0.10", features = ["vendored"] }
openssl-sys = "0.9"
